--- a/app/src/main/res/layouts/fragments/layout/fragment_friends.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_friends.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="com.example.kevin.fifastatistics.FriendsFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    tools:context=".fragments.FriendsFragment"
-    tools:listitem="@layout/fragment_friends_item" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
+        android:name="com.example.kevin.fifastatistics.FriendsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        tools:context=".fragments.FriendsFragment"
+        tools:listitem="@layout/fragment_friends_item" />
+
+</layout>
