--- a/app/src/main/res/layouts/shared/layout/toolbar_profile_image.xml
+++ b/app/src/main/res/layouts/shared/layout/toolbar_profile_image.xml
@@ -1,25 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    app:contentInsetStartWithNavigation="0dp"
-    app:popupTheme="@style/AppTheme.PopupOverlay">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/toolbar_profile_imageview"
-        android:layout_width="@dimen/toolbar_profile_image_size"
-        android:layout_height="@dimen/toolbar_profile_image_size"
-        android:layout_gravity="start"
-        android:layout_marginEnd="@dimen/toolbar_image_margin_end"/>
+    <data>
+        <variable
+            name="imageCallback"
+            type="com.example.kevin.fifastatistics.interfaces.ImageCallback" />
 
-    <TextView
-        android:id="@+id/toolbar_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
+        <variable
+            name="imageUrl"
+            type="String" />
+    </data>
 
-</android.support.v7.widget.Toolbar>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:contentInsetStartWithNavigation="0dp"
+        app:popupTheme="@style/AppTheme.PopupOverlay">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/toolbar_profile_imageview"
+            android:layout_width="@dimen/toolbar_profile_image_size"
+            android:layout_height="@dimen/toolbar_profile_image_size"
+            android:layout_gravity="start"
+            android:layout_marginEnd="@dimen/toolbar_image_margin_end"
+            android:transitionName="@string/transition_profile_image"
+            app:imageUrl="@{imageUrl}"
+            app:imageCallback="@{imageCallback}"/>
+
+        <TextView
+            android:id="@+id/toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
+
+    </android.support.v7.widget.Toolbar>
+
+</layout>
