--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,8 @@
     <dimen name="match_player_margin_external">12dp</dimen>
     <dimen name="match_score_margin_end">50dp</dimen>
 
+    <dimen name="friends_fragment_image_height">130dp</dimen>
+
     <!-- Card view properties -->
     <dimen name="card_corner_radius">4dp</dimen>
     <dimen name="card_header_height">40dp</dimen>
