--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,8 @@
     <dimen name="match_player_margin_internal">8dp</dimen>
     <dimen name="match_player_margin_external">12dp</dimen>
     <dimen name="match_score_margin_end">50dp</dimen>
+    <dimen name="date_header_vertical_margin">5dp</dimen>
+    <dimen name="date_header_gradient_height">15dp</dimen>
 
     <dimen name="friends_fragment_image_height">130dp</dimen>
 
