--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <color name="colorPrimary">#262523</color>
     <color name="colorPrimaryDark">#181715</color>
+    <color name="colorPrimaryDarkTranslucent">#B2181715</color>
     <color name="colorAccent">#4CAF50</color>
     <color name="colorAccentDark">#388E3C</color>
     <color name="blue">#3F51B5</color>
