--- a/app/src/main/res/layouts/shared/layout/activity_pick_team.xml
+++ b/app/src/main/res/layouts/shared/layout/activity_pick_team.xml
@@ -19,15 +19,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
+                app:titleEnabled="false"
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways">
 
-                <include
-                    android:id="@+id/toolbar_layout"
-                    layout="@layout/toolbar_profile_image"
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize">
-                </include>
+                    android:layout_height="?attr/actionBarSize"
+                    android:visibility="visible"
+                    app:popupTheme="@style/AppTheme.PopupOverlay"
+                    app:title="@string/activity_pick_team"/>
 
             </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -36,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="bottom"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:animateLayoutChanges="true"
                 app:tabMode="scrollable" />
 
@@ -48,21 +50,14 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <com.getbase.floatingactionbutton.FloatingActionsMenu
-            android:id="@+id/fab_menu"
+        <ProgressBar
+            android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_gravity="bottom|end"
-            fab:fab_addButtonColorNormal="@color/colorAccent"
-            fab:fab_addButtonColorPressed="@color/colorAccentDark"
-            fab:fab_addButtonPlusIconColor="@color/white"
-            fab:fab_labelStyle="@style/menu_labels_style"
-            app:layout_behavior=".views.ActionMenuBehavior"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:fab="http://schemas.android.com/apk/res-auto">
-        </com.getbase.floatingactionbutton.FloatingActionsMenu>
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:indeterminate="true"
+            style="?android:attr/progressBarStyle"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
