--- a/app/src/main/res/layouts/shared/layout/fragment_event_stream.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_event_stream.xml
@@ -19,6 +19,7 @@
             android:paddingEnd="@dimen/activity_horizontal_margin"/>
 
         <ProgressBar
+            android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
