--- a/app/src/main/res/layouts/shared/layout/item_team.xml
+++ b/app/src/main/res/layouts/shared/layout/item_team.xml
@@ -19,8 +19,8 @@
         android:background="?android:attr/selectableItemBackground">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/team_item_logo_size"
+            android:layout_height="@dimen/team_item_logo_size"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_gravity="center_vertical"
