--- a/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
@@ -13,6 +13,7 @@
         android:background="@color/accent"
         android:clickable="true"
         android:minHeight="?attr/actionBarSize"
+        android:transitionName="@string/transition_match_toolbar"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
