--- a/app/src/main/res/layouts/shared/layout/activity_create_series.xml
+++ b/app/src/main/res/layouts/shared/layout/activity_create_series.xml
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:title="@string/new_series"
+                android:transitionName="@string/transition_match_toolbar"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </android.support.design.widget.AppBarLayout>
