--- a/app/src/main/res/layouts/shared/layout/create_series_score_summary.xml
+++ b/app/src/main/res/layouts/shared/layout/create_series_score_summary.xml
@@ -10,6 +10,7 @@
     </data>
 
     <RelativeLayout
+        android:id="@+id/score_summary_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
@@ -32,6 +33,7 @@
             app:imageUrl="@{seriesSummaryViewModel.userImageUrl}"/>
 
         <LinearLayout
+
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
