--- a/app/src/main/res/layouts/shared/layout/fragment_event_stream.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_event_stream.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -18,15 +19,9 @@
             android:paddingStart="@dimen/activity_horizontal_margin"
             android:paddingEnd="@dimen/activity_horizontal_margin"/>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:indeterminate="true"
-            android:visibility="@{progressViewModel.progressBarVisibility}"
-            style="?android:attr/progressBarStyle"/>
+        <include
+            layout="@layout/progress"
+            bind:progressViewModel="@{progressViewModel}"/>
 
     </FrameLayout>
 
