--- a/app/src/main/res/layouts/fragments/layout/fragment_friends.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_friends.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
-        android:name="com.example.kevin.fifastatistics.FriendsFragment"
+    <data>
+        <variable
+            name="progressViewModel"
+            type="com.example.kevin.fifastatistics.viewmodels.ProgressFragmentViewModel"/>
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        tools:context=".fragments.FriendsFragment"
-        tools:listitem="@layout/fragment_friends_item" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
+            android:name="com.example.kevin.fifastatistics.FriendsFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            tools:context=".fragments.FriendsFragment"
+            tools:listitem="@layout/fragment_friends_item" />
+
+        <include
+            layout="@layout/progress"
+            bind:progressViewModel="@{progressViewModel}"/>
+
+    </FrameLayout>
 
 </layout>
