--- a/app/src/main/res/layouts/useroverview/layout/records_value_item.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_value_item.xml
@@ -2,21 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
-              android:layout_height="@dimen/record_value_item_height">
+              android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/value"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:gravity="center"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingTop="@dimen/record_item_vertical_padding"
+        android:paddingBottom="@dimen/record_header_vertical_padding"
         android:textColor="@color/white"
         android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
-        android:layout_height="15dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/record_item_vertical_padding"
         android:gravity="center"/>
 
 </LinearLayout>
