--- a/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_card_view.xml
@@ -5,7 +5,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/records_card_view"
     android:layout_width="match_parent"
-    android:layout_height="210dp"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/activity_horizontal_margin"
     card_view:cardCornerRadius="@dimen/card_corner_radius"
     app:cardBackgroundColor="@color/cardViewBackground">
@@ -14,7 +14,7 @@
     <com.example.kevin.fifastatistics.views.cards.RecordsCardView
         android:id="@+id/recordscardview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
     </com.example.kevin.fifastatistics.views.cards.RecordsCardView>
 
 
