--- a/app/src/main/res/layouts/useroverview/layout/records_card_view_layout.xml
+++ b/app/src/main/res/layouts/useroverview/layout/records_card_view_layout.xml
@@ -3,7 +3,7 @@
               android:id="@+id/records_card_view_layout"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
     <include
         layout="@layout/records_set_item"
