--- a/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
@@ -61,4 +61,11 @@
         android:layout_below="@id/right_image"
         android:layout_margin="@dimen/activity_horizontal_margin"/>
 
+    <ImageView
+        android:id="@+id/preview_iv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"
+        android:visibility="gone"/>
+
 </RelativeLayout>
