--- a/app/src/main/res/layouts/shared/layout/toolbar_profile_image.xml
+++ b/app/src/main/res/layouts/shared/layout/toolbar_profile_image.xml
@@ -34,6 +34,8 @@
             android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
 
     </android.support.v7.widget.Toolbar>
