--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,7 @@
     <dimen name="team_item_vertical_margin">10dp</dimen>
     <dimen name="team_item_logo_size">30dp</dimen>
     <dimen name="match_team_logo_size">20dp</dimen>
+    <dimen name="shutter_button_margin">25dp</dimen>
 
     <dimen name="friends_fragment_image_height">130dp</dimen>
 
