--- a/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
+++ b/app/src/main/res/layouts/fragments/layout/fragment_add_match.xml
@@ -1,71 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorPrimary"
-                android:scrollbars="none"
-                xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
+    android:scrollbars="none">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/dialog_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/accent"
-        android:clickable="true"
-        android:minHeight="?attr/actionBarSize"
-        android:transitionName="@string/transition_match_toolbar"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:elevation="@dimen/toolbar_elevation"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     </android.support.v7.widget.Toolbar>
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/left_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <RelativeLayout
+        android:id="@+id/match_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/dialog_toolbar"
-        android:layout_alignParentStart="true"
-        android:layout_margin="@dimen/activity_vertical_margin"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#FFFFFF"
-        android:src="@android:color/white"/>
+        android:background="@color/cardViewHeaderBackground">
 
-    <ImageButton
-        android:id="@+id/switch_sides_button"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/dialog_toolbar"
-        android:layout_margin="@dimen/activity_vertical_margin"
-        android:src="@drawable/ic_swap_horiz_white_24dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="Switch Sides"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/left_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginStart="@dimen/create_series_user_image_margin"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FFFFFF"
+            android:src="@android:color/white"/>
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/right_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/dialog_toolbar"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/activity_vertical_margin"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#FFFFFF"
-        android:src="@android:color/white"/>
+        <ImageButton
+            android:id="@+id/switch_sides_button"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="@dimen/activity_vertical_margin"
+            android:src="@drawable/ic_swap_horiz_white_24dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/switch_sides"/>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/right_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/create_series_user_image_margin"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FFFFFF"
+            android:src="@android:color/white"/>
+
+    </RelativeLayout>
 
     <com.example.kevin.fifastatistics.views.AddMatchListLayout
         android:id="@+id/add_match_list_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/right_image"
-        android:layout_margin="@dimen/activity_horizontal_margin"/>
-
-    <ImageView
-        android:id="@+id/preview_iv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitCenter"
-        android:visibility="gone"/>
+        android:layout_below="@id/match_header"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin" />
 
 </RelativeLayout>
