--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="g_top_margin">100dp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
 
     <dimen name="app_bar_height">156dp</dimen>
     <dimen name="toolbar_height">48dp</dimen>
