--- a/app/src/main/res/layouts/shared/layout/fragment_event_stream.xml
+++ b/app/src/main/res/layouts/shared/layout/fragment_event_stream.xml
@@ -15,9 +15,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/matches_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingStart="@dimen/activity_horizontal_margin"
-            android:paddingEnd="@dimen/activity_horizontal_margin"/>
+            android:layout_height="match_parent" />
 
         <include
             layout="@layout/progress"
